[package]
name = "parsefile"
version = "0.1.0"
edition = "2024"

[lib]
name = "parsefile_lib"

[dependencies]
chardet = "0.2.4"
encoding = "0.2.33"
anyhow = "1.0.*"
chrono = { version = "0.4.*" }
gpui = { version = "*", features = [
    "wayland",
    "x11",
    "font-kit",
    "windows-manifest",
] }
gpui-component = "0.5.*"
gpui-component-assets = "0.5.*"
regex = { version = "1.12.*" }
rust_xlsxwriter = { version = "0.92.*" }

[features]
default = ["ui"]
cli = []
ui = []
